--- a/pages/editor.html
+++ b/pages/editor.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/editor.css"/>
 </head>
 <body>
-    <div id="MainSection" ondragover="onDragOver(event)" ondrop="onDrop(event)">
+    <div id="MainSection" ondragover="onDragOver(event)" ondrop="onDrop(event)"></div>
     <script src="../scripts/functions.js"></script>
     <script src="../scripts/editor.js"></script>
 </body>
