--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -52,6 +52,7 @@
        </div>
     
     </div>
+    <script src="../scripts/script_variables.js"></script>
     <script src="../scripts/functions.js"></script>
     <script src="../scripts/dashboard.js"></script>
 </body>
