--- a/pages/editor.html
+++ b/pages/editor.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="MainSection" ondragover="onDragOver(event)" ondrop="onDrop(event)"></div>
+    <script src="../scripts/script_variables.js"></script>
     <script src="../scripts/functions.js"></script>
     <script src="../scripts/editor.js"></script>
 </body>
