--- a/pages/editor.html
+++ b/pages/editor.html
@@ -10,7 +10,8 @@
 <body>
     <div id="MainSection" ondragover="onDragOver(event)" ondrop="onDrop(event)"></div>
     <div id="ToolSection">
-        <button id="newImgFrameButton">+ImgFRAME</button>
+        <button id="newImgFrameButton">+addImgFRAME</button>
+        <button id="delImgFrame">deleteImgFrame</button>
         <button id="saveProject">+save</button>
     </div>
     <script src="../scripts/script_variables.js"></script>
